# pipelines_v3_rj_sms

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prefectignore  README.md  localrun.cases.yaml  localrun.py  prefect.yaml  pyproject.toml  register_flows.py
.claude/: README.md
.claude/migrate-v1-to-v3/: SKILL.md
.github/actions/deploy-prefect-flows/: action.yaml
.github/scripts/: deploy_prefect_flows.py
.github/workflows/: deploy-flows-prod.yml  deploy-flows-staging.yml  lint.yml
.github/workflows/scripts/: register_flows.py
pipelines/: Dockerfile  constants.py  flows.py
pipelines/datalake/extract_load/: README.md
pipelines/datalake/extract_load/1746_web/: constants.py  flows.py  schedules.py  tasks.py
pipelines/datalake/extract_load/clone_bigquery/: flows.py  schedules.py  tasks.py
pipelines/datalake/extract_load/dbc/: flows.py  tasks.py
pipelines/datalake/extract_load/diario_oficial_rj/: flows.py  logica.txt  regras.txt  tasks.py  utils.py
pipelines/datalake/extract_load/diario_oficial_uniao/: constants.py  flows.py  schedules.py  tasks.py
pipelines/datalake/migrate/: README.md
pipelines/datalake/transform/: README.md
pipelines/migrate/gdrive_to_gcs/: flows.py  tasks.py  utils.py
pipelines/reports/: README.md
pipelines/reports/alerta_atualizacao_tabelas/: __init__.py  flows.py  schedules.py  tasks.py
pipelines/reports/alerta_jobs_caros/: constants.py  flows.py  schedules.py  tasks.py
pipelines/reports/informes_seguranca/: constants.py  flows.py  schedules.py  tasks.py  utils.py
pipelines/reports/long_running_flows/: flows.py  schedules.py  tasks.py
pipelines/reports/monitoramento_hci/: flows.py  schedules.py  tasks.py
pipelines/reports/voce_precisa_saber/: constants.py  flows.py  schedules.py  tasks.py  utils.py
pipelines/reports/weather/: constants.py  flows.py  schedules.py  tasks.py
pipelines/utils/: api.py  azure.py  cleanup.py  cloud_function.py  datalake.py  datetime.py  email.py  env.py  flow.py  git.py  google.py  google_cloud.py  infisical.py  io.py  logger.py  monitor.py  prefect.py  process.py  schedules.py  state_handlers.py
server/: .env.example  README.md  docker-compose.yml
server/scripts/: Dockerfile.prefect-worker  pg_entrypoint.sh  worker_entrypoint.sh
server/settings/: Dockerfile.prefect-server  download_repo.sh  initial.nginx.conf  pipelines.nginx.conf  ws_secret.conf.example
(+114 files in other folders)
