[project]
name = "pipelines-v3-rj-sms"
version = "0.0.1"
description = "Pipelines"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
  "db-dtypes>=1.4.4",  # BigQuery reclama sem esse pacote
  "discord-py>=2.6.4",
  "google-cloud-bigquery>=3.40.1",
  "google-cloud-storage>=3.9.0",
  "infisicalsdk>=1.0.16",
  "pandas>=3.0.1",
  "prefect>=3.6",
]

[tool.uv]
# [Ref] https://docs.astral.sh/uv/reference/settings/#exclude-newer
exclude-newer = "1 week"

[tool.prefect]
logging.level = "INFO"
