[project]
name = "pipelines-v3-rj-sms"
version = "0.0.1"
description = "Pipelines"
readme = "README.md"
requires-python = ">=3.13,<3.14"  # dbt não existe pra Python 3.14+
dependencies = [
  "db-dtypes>=1.4.4",  # BigQuery reclama sem db-dtypes
  "dbt-bigquery>=1.11.1",
  "dbt-core>=1.11.7",
  "discord-py>=2.6.4",
  "google-cloud-bigquery>=3.40.1",
  "google-cloud-storage>=3,<3.2",  # dbt-bigquery requer google-cloud-storage<3.2
  "infisicalsdk>=1.0.16",
  "pandas>=3.0.1",
  "prefect>=3.6",
]

[dependency-groups]
dev = [
  "prefect-docker>=0.6.5",
  "ruff>=0.15.6",
  "taskipy>=1.14.1",
]

[tool.uv]
# [Ref] https://docs.astral.sh/uv/reference/settings/#exclude-newer
exclude-newer = "1 week"

[tool.prefect]
logging.level = "INFO"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = [
  "E701"  # https://docs.astral.sh/ruff/rules/multiple-statements-on-one-line-colon/
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
line-ending = "lf"
skip-magic-trailing-comma = true

[tool.taskipy.tasks]
lint = "ruff check --no-fix . && ruff format --check ."
lint-autofix = "ruff check --fix . && ruff format ."
